# valor-lite

./: .flake8  LICENSE  README.md  compose.yaml  example.env  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
bot/: extensions.json  main.py  requirements.txt
bot/commands/: test_embed.py
bot/core/: __init__.py  request.py  sql.py  valor.py
bot/utils/: __init__.py  request.py  valor_ui.py
commands/: extension.py  test.py  test2.py
utils/: __init__.py  db.py
valor/: main.py  valor.py
valor/commands/: extension.py  test.py  test2.py
valor/core/: sql.py  valor.py
valor/utils/: db.py
